--- a/sass/_eyecandy.scss
+++ b/sass/_eyecandy.scss
@@ -62,6 +62,7 @@ header.block {
 	background-repeat: no-repeat;
 	background-position: bottom right;
 	img {
+		max-width: 100%;
 		box-shadow: 1px 1px 2px #888888;
 	}
 }
